// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "google/protobuf/descriptor.proto";

// Role contains a list of roles for a specified user.
message Role {
  enum ProjectRole {
    // VIEWER has only permissions to view build log or build list.
    VIEWER = 0;
    // EDITOR has all viewer permissions, plus permissions for actions that modify state,
    // such as sync the deployment state.
    EDITOR = 1;
    // ADMIN has all user permissions.
    ADMIN = 2;
  }

  // project_id represents the ID of project account associated with this role.
  string project_id = 1;
  // project_role represents the roles you have in the project.
  ProjectRole project_role = 2;
}

// Required role applied at the method level.
extend google.protobuf.MethodOptions {
  // Required role for ID token that will be checked before running RPC method.
  Role role = 59090;
}
